src/styles/_academy.scss
.Academy {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  flex: 1 1 100%;
}

.pt-non-ideal-state {
  padding-top: 0.7rem;

  .pt-non-ideal-state-visual {
    margin-bottom: 0.5rem;
  }

  .pt-non-ideal-state-title {
    padding: 0.5rem 0 0 0;
  }
}

.GradingListing {
  /* To show the table borders that get cut out by a Card  */
  padding: 1px;
  .ag-grid-export-button {
    margin-top: 20px;
  }
}

